--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "build": "ng build && node server.js",
+    "preinstall": "npm install -g angular-cli",
     "postinstall": "ng build --aot -prod"
   },
   "private": true,
