--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "build": "ng build && node server.js",
-    "preinstall": "npm install -g angular-cli",
-    "postinstall": "ng build --aot -prod"
+    "build": "ng build && node server.js"
   },
   "private": true,
   "dependencies": {
