--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "build": "ng build && node server.js"
+    "server": "node ./server/server.js",
+    "build": "ng build && node ./server/server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
+    "@angular/compiler-cli": "^2.3.1",
     "@angular/core": "^2.3.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/compiler-cli": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.26",
+    "mongoose": "^4.10.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
